// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Indicator /> should accept data-analytics attribute 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2.c2.c2.c2 {
  margin-left: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(218,50%,6%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    aria-label="Success"
    class="c0"
    data-analytics-indicator="Success"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(218, 50%, 6%, 1)"
          r="5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c3"
          data-klear360-component="text"
          letter-spacing="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Indicator /> should render 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2.c2.c2.c2 {
  margin-left: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(218,50%,6%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    aria-label="Success"
    class="c0"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(218, 50%, 6%, 1)"
          r="5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c3"
          data-klear360-component="text"
          letter-spacing="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Indicator /> should render different variants for size and color 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2.c2.c2.c2 {
  margin-left: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(218,50%,6%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  color: hsla(218,50%,6%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    aria-label="Warning"
    class="c0"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="6"
        viewBox="0 0 10 10"
        width="6"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(34, 94%, 35%, 1)"
          r="5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c3"
          data-klear360-component="text"
          letter-spacing="50"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Success"
    class="c0"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(143, 72%, 31%, 1)"
          r="5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c4"
          data-klear360-component="text"
          letter-spacing="50"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Error"
    class="c0"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="10"
        viewBox="0 0 10 10"
        width="10"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(3, 69%, 51%, 1)"
          r="5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c4"
          data-klear360-component="text"
          letter-spacing="50"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Info"
    class="c0"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(196, 98%, 18%, 1)"
          r="5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c4"
          data-klear360-component="text"
          letter-spacing="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Indicator /> should render with intense emphasis 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2.c2.c2.c2 {
  margin-left: 4px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(218,50%,6%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    aria-label="Success"
    class="c0"
    data-klear360-component="indicator"
    role="status"
  >
    <div
      class="c1"
      data-klear360-component="base-box"
    >
      <svg
        aria-hidden="true"
        class=""
        data-klear360-component="icon"
        fill="none"
        height="16"
        viewBox="0 0 10 10"
        width="16"
      >
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(143, 73%, 40%, 0.09)"
          r="5"
        />
        <circle
          cx="5"
          cy="5"
          data-klear360-component="svg-circle"
          fill="hsla(143, 72%, 31%, 1)"
          r="2.5"
        />
      </svg>
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <p
          class="c3"
          data-klear360-component="text"
          letter-spacing="50"
        >
          Success
        </p>
      </div>
    </div>
  </div>
</div>
`;
